Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32834

Font family StyleHint on Mac OS X 10.8 ignored

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0
    • 5.1.0
    • GUI: Font handling
    • None
    • macOS
    • 9d56e9eae67bcde3f102503229e98f802d6d048c

    Description

      tst_QFont::defaultFamily shows that we always return Lucida Grande even when asking for a serif font.

      Attachments

        For Gerrit Dashboard: QTBUG-32834
        # Subject Branch Project Status CR V

        Activity

          People

            liaqi Liang Qi
            frederik Frederik Gladhorn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes